--- a/languages/en.lang
+++ b/languages/en.lang
@@ -82,13 +82,13 @@ users.needObject=Have to be an Object
 includes/handle/handleCommand.js
 
 handleCommand.userBanned=বক্স এ বেশি আবলামি করার কারণে তুমাকে ব্যান করা হয়েছে!!🚫
-handleCommand.threadBanned=Group Has Been Banned..!⛔️\nPlease Contact Owner SUJON For Unban ⚠️
+handleCommand.threadBanned=Group Has Been Banned..!⛔️\nPlease Contact Owner SHUVO For Unban ⚠️
 handleCommand.commandNotExist=দূঃখিত আপনি ভুল কমান্ড ব্যবহার করছেন%1 ?\n\nঅন্য কমান্ড ব্যবহার করুন  🕊️
 handleCommand.commandThreadBanned=Your thread is unable to use command "%1"
 handleCommand.commandUserBanned=You are unable to use command "%1"
 handleCommand.threadNotAllowNSFW=This Commnd Only use Andmin
 handleCommand.cantGetInfoThread=Can't get your thread's info, error: %1
-handleCommand.permssionNotEnough="%1 এই কমান্ডটা তোর জন্য না!\n👑 এইটা শুধুমাত্র আমার বস সুজন  ব্যবহার করতে পারবে!\nতুই এডমিন লেভেলে নাই বুঝলি? 😂
+handleCommand.permssionNotEnough="%1 এই কমান্ডটা তোর জন্য না!\n👑 এইটা শুধুমাত্র আমার বস শুভ ব্যবহার করতে পারবে!\nতুই এডমিন লেভেলে নাই বুঝলি? 😂
 handleCommand.cantSetMessageReaction=Having some unexpected error at setMessageReaction, error: %1
 handleCommand.executeCommand=[ %1 ] Command used: %2 by user: %3 at thread: %4 | Args included: %5 | Processing time: %6ms
 handleCommand.commandError=Having some unexpected error when using command %1, error: %2
